--- a/AIPlanning/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AIPlanning/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ LastLevel=/Game/AI_Planning/Level/Tester
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+Object="\"Object\" "
 SkyLightComponent="\"Object\" "
 LightComponentBase="\"Object\" "
 SceneComponent="\"Object\" "
@@ -380,6 +380,8 @@ K2Node_StructMemberGet="\"Object\" "
 K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
+BTTask_Wait="\"Object\" "
+BTTask_MoveToCastle_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -391,24 +393,26 @@ InstalledPlugins=WMFCodecs
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AI_Planning/Tower/BT_Tower
-MRUItem1=/Game/AI_Planning/Tower/BB_Tower
-MRUItem2=/Game/AI_Planning/Enemy/BB_EnemyAI
-MRUItem3=/Game/AI_Planning/Enemy/BP_Enemy
-MRUItem4=/Game/AI_Planning/Tower/BP_Tower
-MRUItem5=/Game/AI_Planning/Tower/BP_Tower_AIC
-MRUItem6=/Game/AI_Planning/Enemy/BP_EnemySpawner
-MRUItem7=/Game/AI_Planning/Enemy/BP_Enemy_AIC
-MRUItem8=/Game/AI_Planning/Enemy/Tasks/BTTask_MoveToTower
-MRUItem9=/Game/AI_Planning/Enemy/BT_EnemyAI
-MRUItem10=/Game/AI_Planning/Enemy/BTTask_MoveToTower
-MRUItem11=/Game/AI_Planning/Tower/BP_Bullet
-MRUItem12=/Game/AI_Planning/Level/Tester
-MRUItem13=/Game/LevelPrototyping/Meshes/SM_ChamferCube
-MRUItem14=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem15=/Game/StarterContent/Maps/Minimal_Default
-MRUItem16=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem17=/Game/StarterContent/Maps/StarterMap
+MRUItem0=/Game/AI_Planning/Enemy/BP_Enemy
+MRUItem1=/Game/AI_Planning/Tower/BP_Tower
+MRUItem2=/Game/AI_Planning/Enemy/BT_EnemyAI
+MRUItem3=/Game/AI_Planning/Enemy/Tasks/BTTask_MoveToTower
+MRUItem4=/Game/AI_Planning/Enemy/BTTask_MoveToCastle
+MRUItem5=/Game/AI_Planning/Castle/BP_Castle
+MRUItem6=/Game/AI_Planning/Tower/BT_Tower
+MRUItem7=/Game/AI_Planning/Tower/BB_Tower
+MRUItem8=/Game/AI_Planning/Enemy/BB_EnemyAI
+MRUItem9=/Game/AI_Planning/Tower/BP_Tower_AIC
+MRUItem10=/Game/AI_Planning/Enemy/BP_EnemySpawner
+MRUItem11=/Game/AI_Planning/Enemy/BP_Enemy_AIC
+MRUItem12=/Game/AI_Planning/Enemy/BTTask_MoveToTower
+MRUItem13=/Game/AI_Planning/Tower/BP_Bullet
+MRUItem14=/Game/AI_Planning/Level/Tester
+MRUItem15=/Game/LevelPrototyping/Meshes/SM_ChamferCube
+MRUItem16=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem17=/Game/StarterContent/Maps/Minimal_Default
+MRUItem18=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem19=/Game/StarterContent/Maps/StarterMap
 
 [DetailCategories]
 TextRenderActor.TransformCommon=True
@@ -1484,6 +1488,24 @@ K2Node_VariableSet.Events=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+BP_Castle_C.Tick=True
+BP_Castle_C.Replication=True
+BP_Castle_C.Rendering=True
+BP_Castle_C.Collision=True
+BP_Castle_C.Actor=True
+BP_Castle_C.Input=True
+BP_Castle_C.HLOD=True
+BP_Castle_C.Physics=True
+BP_Castle_C.WorldPartition=True
+BP_Castle_C.Events=True
+BP_Castle_C.TransformCommon=True
+BP_Castle_C.Networking=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
+BTTask_MoveToCastle_C.Default=True
+BTTask_MoveToCastle_C.Task=True
+BTTask_MoveToCastle_C.Description=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1498,7 +1520,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/AI_Planning/Tower
+ContentBrowserDrawer.SelectedPaths=/Game/AI_Planning/Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1533,6 +1555,7 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/AI_Planning/Castle/BP_Castle.BP_Castle;
 RecentlyPlaced=/Game/AI_Planning/Enemy/BP_EnemySpawner.BP_EnemySpawner;
 RecentlyPlaced=/Game/AI_Planning/Enemy/BP_Enemy.BP_Enemy;
 RecentlyPlaced=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny;
@@ -1563,6 +1586,8 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 /Game/AI_Planning/Tower/BP_Tower_AIC.BP_Tower_AIC=1
 /Game/AI_Planning/Tower/BB_Tower.BB_Tower=1
 /Game/AI_Planning/Tower/BT_Tower.BT_Tower=1
+/Game/AI_Planning/Castle/BP_Castle.BP_Castle=1
+/Game/AI_Planning/Enemy/BTTask_MoveToCastle.BTTask_MoveToCastle=1
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
